--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "material-paper": "0.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-snaplist-carousel": "^4.4.2",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "carousel-js": "^4.0.0"
   }
 }
