--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
+    "@material-ui/icons": "^4.11.3",
     "@mui/joy": "^5.0.0-alpha.63",
     "@mui/material": "^5.11.3",
     "@mui/x-data-grid": "^5.17.18",
